[Material][Mac] Set Incognito Omnibox Dropdown Icons to White

BUG=618763

Review-Url: https://codereview.chromium.org/2082723002
Cr-Commit-Position: refs/heads/master@{#402634}

Former-commit-id: a8403516d197bb546c068d3202f41844a004892e