chrome/browser/ui/cocoa/omnibox/omnibox_popup_view_mac.h
@@ -53,8 +53,7 @@ class OmniboxPopupViewMac : public OmniboxPopupView,
                                 size_t row) override;
 
   // Returns the NSImage that should be used as an icon for the given match.
-  NSImage* ImageForMatch(const AutocompleteMatch& match,
-                         BOOL ignore_dark_theme) const;
+  NSImage* ImageForMatch(const AutocompleteMatch& match) const;
 
   OmniboxPopupMatrix* matrix() { return matrix_; }
 
